Finalised wireframe html structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Simple Wireframe</title>
+		<title>Simple Wireframe - landing</title>
 	</head>
 	<body>
 		<article>
@@ -41,28 +41,28 @@
 							<blockquote>
 								<p>" Aenean congue at leo ut sagittis. Integer maximus accumsan ligula, eu auctor libero tristique molestie."</p>
 								<cite>- someone</cite>
-								<img src="avatar1.jpg">
+								<img src="img/avatar1.jpg">
 							</blockquote>
 						</li>
 						<li>
 							<blockquote>
 								<p>" Aenean congue at leo ut sagittis. Integer maximus accumsan ligula, eu auctor libero tristique molestie."</p>
 								<cite>- someone</cite>
-								<img src="avatar1.jpg">
+								<img src="img/avatar1.jpg">
 							</blockquote>
 						</li>
 						<li>
 							<blockquote>
 								<p>" Aenean congue at leo ut sagittis. Integer maximus accumsan ligula, eu auctor libero tristique molestie."</p>
 								<cite>- someone</cite>
-								<img src="avatar1.jpg">
+								<img src="img/avatar1.jpg">
 							</blockquote>
 						</li>
 						<li>
 							<blockquote>
 								<p>" Aenean congue at leo ut sagittis. Integer maximus accumsan ligula, eu auctor libero tristique molestie."</p>
 								<cite>- someone</cite>
-								<img src="avatar1.jpg">
+								<img src="img/avatar1.jpg">
 							</blockquote>
 						</li>
 					</ul>
